--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "name": "sure-guard",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Node library for data validation",
   "scripts": {
-    "build": "babel src -d lib",
-    "test": "mocha"
+    "start": "nodemon src/main.ts",
+    "lint": "eslint 'src/**/*.ts' --fix",
+    "format": "prettier --write 'src/**/*.ts'"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Pedro Arthur",
+  "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "mocha": "^10.2.0"
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
