--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,5 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "src/tests"]
+  "include": ["src/**/*.ts"]
 }
